--- a/legal.html
+++ b/legal.html
@@ -54,7 +54,45 @@
   <p>Effective Date: May 15, 2025</p>
 
   <div class="section">
-    <h2>Terms of Service</h2>
+    <h2 id="privacy-policy">Privacy Policy</h2>
+
+    <p>This Privacy Policy describes how Bearplane ("the Game") operated by Matthew Burton ("I", "me", "my") collects, uses, and protects information.</p>
+
+    <h3>1. Information We Collect</h3>
+    <p>Bearplane does not collect personally identifiable information directly. However, third-party services like Unity Ads, Apple Game Center, Google Play Services, and Steam may collect information automatically.</p>
+
+    <h3>2. How We Use Information</h3>
+    <p>Third-party services use information to:</p>
+    <ul>
+      <li>Serve optional advertisements (Unity Ads)</li>
+      <li>Track achievements and leaderboard standings (Game Center, Google Play Services, Steam)</li>
+    </ul>
+    <p>I do not sell, rent, or trade your information.</p>
+
+    <h3>3. Third-Party Services</h3>
+    <p>Bearplane connects with:</p>
+    <ul>
+      <li><a href="https://unity.com/legal/game-player-and-app-user-privacy-policy" target="_blank">Unity Ads</a></li>
+      <li><a href="https://www.apple.com/legal/privacy/" target="_blank">Apple Game Center</a></li>
+      <li><a href="https://policies.google.com/privacy" target="_blank">Google Play Services</a></li>
+      <li><a href="https://store.steampowered.com/privacy_agreement/" target="_blank">Steam</a></li>
+    </ul>
+
+    <h3>4. Children's Privacy</h3>
+    <p>Bearplane is intended for players aged 13 and older. If you are younger than 13, please do not use the Game.</p>
+
+    <h3>5. Security</h3>
+    <p>Reasonable measures are taken to protect your information, but no method of electronic storage or transmission is 100% secure.</p>
+
+    <h3>6. Changes to This Policy</h3>
+    <p>Changes to this Privacy Policy will be posted at <a href="https://atomicmills.com/legal.html">https://atomicmills.com/legal.html</a>.</p>
+
+    <h3>7. Contact</h3>
+    <p>Questions about privacy? Email <a href="mailto:m@ttburton.com">m@ttburton.com</a>.</p>
+  </div>
+  
+  <div class="section">
+    <h2 id="terms">Terms of Service</h2>
 
     <p>Welcome to Bearplane ("the Game"), developed and operated by Matthew Burton ("I", "me", "my"). By soaring, diving, crashing, or otherwise accessing Bearplane on iOS, Android, or Steam, you agree to these Terms and Conditions ("Terms"). If you don’t agree, please land your craft elsewhere.</p>
 
@@ -95,44 +133,6 @@
 
     <h3>11. Contact</h3>
     <p>Questions? Email me at <a href="mailto:m@ttburton.com">m@ttburton.com</a>.</p>
-  </div>
-
-  <div class="section">
-    <h2 id="privacy-policy">Privacy Policy</h2>
-
-    <p>This Privacy Policy describes how Bearplane ("the Game") operated by Matthew Burton ("I", "me", "my") collects, uses, and protects information.</p>
-
-    <h3>1. Information We Collect</h3>
-    <p>Bearplane does not collect personally identifiable information directly. However, third-party services like Unity Ads, Apple Game Center, Google Play Services, and Steam may collect information automatically.</p>
-
-    <h3>2. How We Use Information</h3>
-    <p>Third-party services use information to:</p>
-    <ul>
-      <li>Serve optional advertisements (Unity Ads)</li>
-      <li>Track achievements and leaderboard standings (Game Center, Google Play Services, Steam)</li>
-    </ul>
-    <p>I do not sell, rent, or trade your information.</p>
-
-    <h3>3. Third-Party Services</h3>
-    <p>Bearplane connects with:</p>
-    <ul>
-      <li><a href="https://unity.com/legal/game-player-and-app-user-privacy-policy" target="_blank">Unity Ads</a></li>
-      <li><a href="https://www.apple.com/legal/privacy/" target="_blank">Apple Game Center</a></li>
-      <li><a href="https://policies.google.com/privacy" target="_blank">Google Play Services</a></li>
-      <li><a href="https://store.steampowered.com/privacy_agreement/" target="_blank">Steam</a></li>
-    </ul>
-
-    <h3>4. Children's Privacy</h3>
-    <p>Bearplane is intended for players aged 13 and older. If you are younger than 13, please do not use the Game.</p>
-
-    <h3>5. Security</h3>
-    <p>Reasonable measures are taken to protect your information, but no method of electronic storage or transmission is 100% secure.</p>
-
-    <h3>6. Changes to This Policy</h3>
-    <p>Changes to this Privacy Policy will be posted at <a href="https://atomicmills.com/legal.html">https://atomicmills.com/legal.html</a>.</p>
-
-    <h3>7. Contact</h3>
-    <p>Questions about privacy? Email <a href="mailto:m@ttburton.com">m@ttburton.com</a>.</p>
   </div>
 
   <div class="section">
