--- a/index.html
+++ b/index.html
@@ -139,7 +139,8 @@
 </head>
 <body>
 
-  <img src="atomic-mills-logo-5.png" alt="Atomic Mills Logo" class="logo">
+  <img src="images/atom-gif.gif" alt="Atomic Mills GIF" class="logo">
+  <img src="images/atom-bottom.png" alt="Atomic Mills Logo" class="logo">
 
   <h1>Welcome to Atomic Mills</h1>
   <p>Makers of the World’s First Atomic Breakfast</p>
