--- a/index.html
+++ b/index.html
@@ -135,12 +135,33 @@
       font-size: 0.85em;
     }
 
+    .logo-stack {
+      position: relative;
+      display: inline-block;   /* shrink-wraps to image width */
+      width: 300px;            /* or whatever your image width is */
+      height: auto;            /* you can set a fixed height if you know it */
+    }
+    
+    .logo-stack img {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;             /* ensure both images fill the container */
+      height: auto;
+    }
+    
+    .logo-stack .top {
+      z-index: 1;              /* sit above the bottom layer */
+    }
+
   </style>
 </head>
 <body>
 
-  <img src="images/atom-gif.gif" alt="Atomic Mills GIF" class="logo">
-  <img src="images/atom-bottom.png" alt="Atomic Mills Logo" class="logo">
+  <div class="logo-stack">
+    <img src="images/atom-bottom.png" alt="Atomic Mills Logo" class="bottom">
+    <img src="images/atom-gif.gif"     alt="Atomic Mills GIF"  class="top">
+  </div>
 
   <h1>Welcome to Atomic Mills</h1>
   <p>Makers of the World’s First Atomic Breakfast</p>
