--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 
 <div class="logo-stack">
   <img src="images/atom-gif.gif"     alt="Atomic Mills GIF"  class="logo">
-  <img src="images/atom-bottom.png"  alt="Atomic Mills Logo" class="logo">
+  <img src="images/atom-bottom.gif"  alt="Atomic Mills Logo" class="logo">
 </div>
 
   <h1>Welcome to Atomic Mills</h1>
