--- a/atomic-shirt.html
+++ b/atomic-shirt.html
@@ -78,14 +78,31 @@
     .social-links a:hover {
       text-decoration: underline;
     }
+
+    .logo-stack {
+      display: inline-block;   /* lets text-align:center on the body work */
+      margin: 0 auto 20px;     /* auto‐side margins center it, 20px bottom gap */
+      text-align: center;      /* not strictly needed for imgs, but safe */
+    }
+    
+    .logo-stack img {
+      display: block;          /* one per line, no inline whitespace */
+      width: 300px;            /* or whatever fixed/max width you want */
+      max-width: 100%;
+      margin: 0;               /* already block, so no extra margins */
+    }
+
   </style>
 </head>
 <body>
-
-  <a href="https://www.atomicmills.com">
-    <img src="atomic-mills-logo-5.png" alt="Atomic Mills Logo" class="logo">
+  
+  <a href="https://www.atomicmills.com" target="_blank" rel="noopener">
+    <div class="logo-stack">
+      <img src="images/atom-gif.gif"    alt="Atomic Mills GIF"  class="logo">
+      <img src="images/atom-bottom.gif" alt="Atomic Mills Logo" class="logo">
+    </div>
   </a>
-
+  
   <div class="shirt-section">
     <h1>Official Atomic Mills T-Shirt</h1>
     <p>Celebrate 85 years of questionable science and delicious radiation with our first-ever Atomic Mills tee. Designed for gym rats, breakfast fanatics, and anyone brave enough to microwave uranium.</p>
