--- a/atomic-shirt.html
+++ b/atomic-shirt.html
@@ -80,16 +80,16 @@
     }
 
     .logo-stack {
-      display: inline-block;   /* lets text-align:center on the body work */
-      margin: 0 auto 20px;     /* auto‐side margins center it, 20px bottom gap */
-      text-align: center;      /* not strictly needed for imgs, but safe */
+      display: inline-block;  
+      margin: 0 auto 20px;    
+      text-align: center; 
     }
     
     .logo-stack img {
-      display: block;          /* one per line, no inline whitespace */
-      width: 300px;            /* or whatever fixed/max width you want */
+      display: block;         
+      width: 300px; 
       max-width: 100%;
-      margin: 0;               /* already block, so no extra margins */
+      margin: 0;
     }
 
   </style>
