--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       text-decoration: none;
       color: inherit;
       margin: 30px auto;
-      max-width: 700px; /* Matches .section width */
+      max-width: 700px; 
       box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
       transition: box-shadow 0.2s ease;
     }
@@ -136,16 +136,16 @@
     }
 
     .logo-stack {
-      display: inline-block;   /* lets text-align:center on the body work */
-      margin: 0 auto 20px;     /* auto‐side margins center it, 20px bottom gap */
-      text-align: center;      /* not strictly needed for imgs, but safe */
+      display: inline-block;  
+      margin: 0 auto 20px; 
+      text-align: center; 
     }
     
     .logo-stack img {
-      display: block;          /* one per line, no inline whitespace */
-      width: 300px;            /* or whatever fixed/max width you want */
+      display: block;
+      width: 300px;
       max-width: 100%;
-      margin: 0;               /* already block, so no extra margins */
+      margin: 0;
     }
 
   </style>
