--- a/index.html
+++ b/index.html
@@ -160,6 +160,8 @@
   <h1>Welcome to Atomic Mills</h1>
   <p>Makers of the World’s First Atomic Breakfast</p>
 
+<!-- Hey, no peeking! >D -->
+  
 <!-- <a href="bearplane.html" class="bearplane-card">
   <div class="bearplane-card-content">
     <img src="images/main-12.gif" alt="Bearplane Preview" class="bearplane-image">
@@ -203,7 +205,6 @@
   </div>
 </div>
 
-<!-- Existing row below -->
 <div class="gallery">
   <div class="gallery-item">
     <img src="bee-farm.png" alt="Radioactive Bee Farm">
