--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 <div class="section">
   <h2>About Us</h2>
   <p>Founded in 1940, in a universe where bears can fly, <strong>Atomic Mills</strong> took flight with one radical mission: <em>win the war... with breakfast</em>.</p>
-  <p>As Allied forces searched for an edge, visionary food engineer Dean Lockhart answered the call. Backed by a team of barely-certified scientists and a loose understanding of radiation, Lockhart pioneered <strong>nuclear-infused food products</strong> designed to supercharge soldiers with unmatched speed, strength, and spirit.</p>
+  <p>As Allied forces searched for an edge, a team of barely-certified scientists answered the call. Armed with a loose understanding of radiation and boundless enthusiasm, they pioneered nuclear-infused food products designed to supercharge soldiers with unmatched speed, strength, and spirit.</p>
   <p>From the launch of <em>Flappy Flakes Cereal</em> to the sticky brilliance of <em>Nukey Nectar</em> (harvested from radioactive bees) Atomic Mills turned science into sustenance and breakfast into a launch pad.</p>
 </div>
 
@@ -208,7 +208,7 @@
 <div class="gallery">
   <div class="gallery-item">
     <img src="bee-farm.png" alt="Radioactive Bee Farm">
-    <div class="caption">Dean & Eleanor at the radioactive bee farm</div>
+    <div class="caption">Founders Dean & Eleanor at the radioactive bee farm</div>
   </div>
   <div class="gallery-item">
     <img src="atomic-mills-team.png" alt="The Atomic Mills team, 1941">
