--- a/index.html
+++ b/index.html
@@ -153,8 +153,7 @@
 <body>
 
 <div class="logo-stack">
-  <img src="images/atom-gif.gif"     alt="Atomic Mills GIF"  class="logo">
-  <img src="images/atom-bottom.gif"  alt="Atomic Mills Logo" class="logo">
+  <img src="images/atom-mills-logo.gif"     alt="Atomic Mills GIF"  class="logo">
 </div>
 
   <h1>Welcome to Atomic Mills</h1>
