--- a/atomic-shirt.html
+++ b/atomic-shirt.html
@@ -98,8 +98,7 @@
   
   <a href="https://www.atomicmills.com" target="_blank" rel="noopener">
     <div class="logo-stack">
-      <img src="images/atom-gif.gif"    alt="Atomic Mills GIF"  class="logo">
-      <img src="images/atom-bottom.gif" alt="Atomic Mills Logo" class="logo">
+      <img src="images/atom-mills-logo.gif"    alt="Atomic Mills GIF"  class="logo">
     </div>
   </a>
   
