--- a/atomic-shirt.html
+++ b/atomic-shirt.html
@@ -120,7 +120,7 @@
     <p>Connect with Us:</p>
     <a href="https://www.atomicmills.com" target="_blank">⌂ Home</a> |
     <a href="https://www.instagram.com/atomicmillsco/" target="_blank">Instagram</a> |
-    <a href="https://www.linkedin.com/company/atomic-mills" target="_blank">LinkedIn</a> |
+    <a href="https://www.youtube.com/@AtomicMills" target="_blank">YouTube</a> |
     <a href="https://x.com/AtomicMillsCo" target="_blank">X</a> |
     <a href="mailto:AtomicMills@aol.com">Email</a> |
     <a href="blog.html">Blog</a> |
