--- a/bearplane.html
+++ b/bearplane.html
@@ -419,7 +419,7 @@
   </div> -->
   
 <div class="footer-links" style="text-align: center; margin-top: 2em;">
-  <a href="/">⌂ Home</a> |
+<!--   <a href="/">⌂ Home</a> | -->
   <a href="/bearplane.html">English</a> |
   <a href="/fr/">Français</a> |
   <a href="/es/">Español</a> |
@@ -430,6 +430,13 @@
   <a href="/zh/">简体中文</a> |
   <a href="/ja/">日本語</a>
 <!--   | <a href="https://drive.google.com/drive/folders/1frnhqy5XK2Sel6olELFOckkLg0NcYEWU?usp=sharing" target="_blank">Media Kit 🗂️</a> -->
+</div>
+
+
+<div style="margin-top: 60px;">
+  <a href="index.html">
+    <img src="images/atom.gif" alt="Atomic Mills Home" style="width: 100px; display: block; margin: 0 auto;">
+  </a>
 </div>
 
 <div class="lightbox-overlay" id="lightbox">
