--- a/bearplane.html
+++ b/bearplane.html
@@ -460,5 +460,9 @@
     });
   </script>
 
+  <footer>
+    <p>© 2025 Bearplane by Matthew Burton. All rights reserved.</p>
+  </footer>
+
 </body>
 </html>
