--- a/bearplane.html
+++ b/bearplane.html
@@ -303,7 +303,15 @@
 
   <div class="faq-item">
     <h3>Is Bearplane really inspired by a true story?</h3>
-    <p>Believe it or not, yes! <em>Bearplane</em> takes loose inspiration from Wojtek, the real-life bear who served alongside Polish soldiers in World War II. Our version adds a few more jet packs and shenanigans :D</p>
+    <p>
+      Believe it or not, yes! <em>Bearplane</em> takes loose inspiration from Wojtek, the real-life bear who served alongside Polish soldiers in World War II. Our version adds a few more jet packs and shenanigans :D (Watch the video below to see the real Wojtek in action!)
+    </p>
+    <!-- Clickable image linking to the Wojtek video -->
+    <p>
+      <a href="https://youtu.be/IEXTHNB4WO4" target="_blank" rel="noopener">
+        <img src="images/story-of-wojtek-play.png" alt="Watch the real-life Wojtek story" style="max-width:100%; height:auto; display:block; margin:1em 0;" />
+      </a>
+    </p>
   </div>
 
   <div class="faq-item">
