--- a/bearplane.html
+++ b/bearplane.html
@@ -309,7 +309,11 @@
     <!-- Clickable image linking to the Wojtek video -->
     <p>
       <a href="https://youtu.be/IEXTHNB4WO4" target="_blank" rel="noopener">
-        <img src="images/story-of-wojtek-play.png" alt="Watch the real-life Wojtek story" style="max-width:100%; height:auto; display:block; margin:1em 0;" />
+        <img
+          src="images/story-of-wojtek-play.png"
+          alt="Watch the real-life Wojtek story"
+          style="width:100px; height:auto; display:block; margin:1em 0;"
+        />
       </a>
     </p>
   </div>
