--- a/bearplane.html
+++ b/bearplane.html
@@ -312,7 +312,7 @@
         <img
           src="images/story-of-wojtek-play.png"
           alt="Watch the real-life Wojtek story"
-          style="width:100px; height:auto; display:block; margin:1em 0;"
+          style="width:300px; height:auto; display:block; margin:1em auto;"
         />
       </a>
     </p>
