--- a/bearplane.html
+++ b/bearplane.html
@@ -219,6 +219,26 @@
     }
   }
 
+  .wojtek-images {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    margin: 1em 0;
+  }
+  
+  .wojtek-images img {
+    width: 300px;
+    height: 300px;
+    object-fit: cover;
+    border-radius: 8px;
+    transition: transform 0.2s ease;
+    cursor: pointer;
+  }
+  
+  .wojtek-images img:hover {
+    transform: scale(1.05);
+  }
+
   .lightbox-overlay {
     position: fixed;
     top: 0;
@@ -307,15 +327,11 @@
       Believe it or not, yes! <em>Bearplane</em> takes loose inspiration from Wojtek, the real-life bear who served alongside Polish soldiers in World War II. Our version adds a few more jet packs and shenanigans :D (Watch the video below to see the real Wojtek in action!)
     </p>
     <!-- Clickable image linking to the Wojtek video -->
-    <p>
-      <a href="https://youtu.be/IEXTHNB4WO4" target="_blank" rel="noopener">
-        <img
-          src="images/story-of-wojtek-play.png"
-          alt="Watch the real-life Wojtek story"
-          style="width:300px; height:auto; display:block; margin:1em auto;"
-        />
-      </a>
-    </p>
+    <div class="wojtek-images">
+      <img src="images/wojtek-2.png" alt="Wojtek Sketch Left" />
+      <img src="images/story-of-wojtek-play.png" alt="Watch the real-life Wojtek story" />
+      <img src="images/wojtek-4.png" alt="Wojtek Sketch Right" />
+    </div>
   </div>
 
   <div class="faq-item">
@@ -463,7 +479,7 @@
     const lightbox = document.getElementById("lightbox");
     const lightboxImg = document.getElementById("lightbox-img");
   
-    document.querySelectorAll(".atomic-images img").forEach(img => {
+    document.querySelectorAll(".atomic-images img, .wojtek-images img").forEach(img => {
       img.addEventListener("click", () => {
         lightboxImg.src = img.src;
         lightbox.style.display = "flex";
