--- a/bearplane.html
+++ b/bearplane.html
@@ -227,9 +227,9 @@
   }
   
   .wojtek-images img {
-    width: 300px;
-    height: 300px;
-    object-fit: cover;
+    height: 140px;
+    width: auto;
+    object-fit: contain;
     border-radius: 8px;
     transition: transform 0.2s ease;
     cursor: pointer;
